# antigravity-proxy-claude-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: basic_usage.py  telegram_bot.py
src/antigravity_sdk/: __init__.py  async_client.py  client.py  conversation.py  exceptions.py  models.py  retry.py
tests/: __init__.py  test_client.py  test_conversation.py  test_exceptions.py  test_models.py  test_retry.py
